--- a/src/RecebaFacil.Portal/Views/Auth/Index.cshtml
+++ b/src/RecebaFacil.Portal/Views/Auth/Index.cshtml
@@ -26,29 +26,35 @@
 
 <body class="text-center">
     <form class="form-signin" method="post" asp-route="Auth_Autenticar" asp-antiforgery="true">
-        <img class="mb-4" src="~/image/receba-facil.png" alt="logotipo receba fácil" />
-        <h1 class="h3 mb-3 font-weight-normal">
-            Receba Fácil
-        </h1>
-        <label asp-for="LoginName" class="sr-only">Email</label>
-        <input type="text" asp-for="LoginName" class="form-control" placeholder="Usuário" required autofocus />
-        <span asp-validation-for="LoginName" class="text-danger"></span>
-        <label asp-for="Senha" class="sr-only">Senha</label>
-        <input type="password" asp-for="Senha" class="form-control" placeholder="Senha" required />
-        <span class="text-danger" asp-validation-for="Senha"></span>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Lembrar de mim
-            </label>
+
+        <div class="text-center mb-4">
+            <h1 class="h3 mb-3 font-weight-normal">
+                Receba Fácil
+            </h1>
+            <p>
+                Aproximando o mundo virtual e o físico
+            </p>
         </div>
-        <div asp-validation-summary="ModelOnly" class="bg-warning">
+        <div class="form-label-group">
+            <label asp-for="LoginName" class="sr-only">Email</label>
+            <input type="text" asp-for="LoginName" class="form-control" placeholder="Usuário" required autofocus />
+            <span asp-validation-for="LoginName" class="text-danger"></span>
         </div>
+        <div class="form-label-group">
+            <label asp-for="Senha" class="sr-only">Senha</label>
+            <input type="password" asp-for="Senha" class="form-control" placeholder="Senha" required />
+            <span class="text-danger" asp-validation-for="Senha"></span>
+        </div>
+
+        <div asp-validation-summary="ModelOnly" class="bg-warning"></div>
+
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
         <div class="row">
             <div class="col-12">
                 <a class="btn btn-link" asp-route="Auth_PreRegistro">Não tem cadastro?</a>
             </div>
         </div>
+        <p class="mt-5 mb-3 text-muted text-center">&copy; 2020</p>
     </form>
 </body>
 </html>
