--- a/src/RecebaFacil.Portal/Views/Perfil/_Perfil.cshtml
+++ b/src/RecebaFacil.Portal/Views/Perfil/_Perfil.cshtml
@@ -15,10 +15,19 @@
             <b>CPNJ</b>&nbsp;@Model.Cnpj
         </p>
         <p>
-            <b>Contato</b>&nbsp;@Model.Contato
-        </p>
-        <p>
             Parceiro desde: @Model.DataCadastro.ToShortDateString()
         </p>
     </div>
+    @if (Model.Contatos.Any())
+    {
+        <div class="col">
+            <h3>Contatos</h3>
+            <ul class="list-group list-group-flush">
+                @foreach (var item in Model.Contatos)
+                {
+                    <li class="list-group-item">@item.Valor</li>
+                }
+            </ul>
+        </div>
+    }
 </div>
