--- a/src/RecebaFacil.Portal/Views/PontoRetirada/Index.cshtml
+++ b/src/RecebaFacil.Portal/Views/PontoRetirada/Index.cshtml
@@ -1,45 +1,65 @@
 ﻿@model RecebaFacil.Portal.Models.InicioViewModel
 
-<partial name="_Header" model="@Model.Header" />
 
-<div class="card-deck mb-3 text-center">
-    <div class="card mb-4 shadow-sm">
-        <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Encomendas</h4>
-        </div>
-        <div class="card-body">
-            <h1 class="card-title">Verifique suas encomendas</h1>
-            <ul class="list-unstyled mt-3 mb-4">
-                <li><i class="fas fa-check"></i>a caminho</li>
-                <li><i class="fas fa-check"></i>aguardando retirada</li>
-                <li><i class="fas fa-check"></i>entregues</li>
-            </ul>
-        </div>
+<div class="row mb-5">
+    <div class="col-8">
+        <h2 class="d-inline">
+            @Model.NomeEmpresa
+        </h2>
+        &nbsp;
+        <a title="Meu Perfil" aria-label="acessar meu perfil" class="btn-link text-muted"
+           asp-route="MeuPerfil">
+            <i class="fa fa-user-alt"></i>
+        </a>
     </div>
-    <div class="card mb-4 shadow-sm">
-        <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Encomendas</h4>
-        </div>
-        <div class="card-body">
-            <h1 class="card-title">Verifique</h1>
-            <ul class="list-unstyled mt-3 mb-4">
-                <li>a caminho</li>
-                <li>aguardando retirada</li>
-                <li>entregues</li>
-            </ul>
-        </div>
+    <div class="col-4 text-lg-right">
+        <p class="d-inline-block">
+            Usuário: @Model.NomeUsuario<br />Acesso: @Model.Hoje
+        </p>
     </div>
-    <div class="card mb-4 shadow-sm">
-        <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Encomendas</h4>
-        </div>
-        <div class="card-body">
-            <h1 class="card-title">Verifique</h1>
-            <ul class="list-unstyled mt-3 mb-4">
-                <li>a caminho</li>
-                <li>aguardando retirada</li>
-                <li>entregues</li>
-            </ul>
+</div>
+<div class="row">
+    <div class="col">
+        <div class="card-deck mb-3 text-center">
+            <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">Encomendas</h4>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title">Verifique suas encomendas</h1>
+                    <ul class="list-unstyled mt-3 mb-4">
+                        <li><i class="fas fa-check"></i>a caminho</li>
+                        <li><i class="fas fa-check"></i>aguardando retirada</li>
+                        <li><i class="fas fa-check"></i>entregues</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">Encomendas</h4>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title">Verifique</h1>
+                    <ul class="list-unstyled mt-3 mb-4">
+                        <li>a caminho</li>
+                        <li>aguardando retirada</li>
+                        <li>entregues</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card mb-4 shadow-sm">
+                <div class="card-header">
+                    <h4 class="my-0 font-weight-normal">Encomendas</h4>
+                </div>
+                <div class="card-body">
+                    <h1 class="card-title">Verifique</h1>
+                    <ul class="list-unstyled mt-3 mb-4">
+                        <li>a caminho</li>
+                        <li>aguardando retirada</li>
+                        <li>entregues</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
