nova listagem de encomendas para ponto de retirada

--- a/src/RecebaFacil.Portal/Views/Auth/Index.cshtml
+++ b/src/RecebaFacil.Portal/Views/Auth/Index.cshtml
@@ -32,7 +32,7 @@
                 Receba Fácil
             </h1>
             <p>
-                Aproximando o mundo virtual e o físico
+                Sistema de Recebimento de Encomendas
             </p>
         </div>
         <div class="form-label-group">
@@ -49,11 +49,11 @@
         <div asp-validation-summary="ModelOnly" class="bg-warning"></div>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-        <div class="row">
+        @*<div class="row">
             <div class="col-12">
                 <a class="btn btn-link" asp-route="Auth_PreRegistro">Não tem cadastro?</a>
             </div>
-        </div>
+        </div>*@
         <p class="mt-5 mb-3 text-muted text-center">&copy; 2020</p>
     </form>
 </body>
