--- a/src/RecebaFacil.Portal/Views/Home/Suporte.cshtml
+++ b/src/RecebaFacil.Portal/Views/Home/Suporte.cshtml
@@ -1,6 +1,3 @@
-﻿@{
-    ViewData["Title"] = "Suporte";
-}
-<h1>Fale conosco</h1>
+﻿<h1>Fale conosco</h1>
 
 <a class="btn btn-link" asp-controller="Home" asp-action="Index">Voltar</a>
