--- a/src/RecebaFacil.Portal/Views/Perfil/_Endereco.cshtml
+++ b/src/RecebaFacil.Portal/Views/Perfil/_Endereco.cshtml
@@ -1,59 +1,77 @@
 ﻿@model RecebaFacil.Portal.Models.PontoRetirada.MeuEnderecoViewModel
 
 <div class="row">
-    <div class="col-12 mt-3 mb-3 text-center">
-        <h3>Endereço cadastrado</h3>
-    </div>
-</div>
-<div class="row">
-    <div class="col-6">
-        <p>
-            <label>CEP</label>
-            @Model.Cep
-        </p>
-    </div>
-</div>
-<div class="row">
-    <div class="col-6">
-        <p>
-            <label>Logradouro:</label>
-            @Model.Logradouro
-        </p>
-    </div>
-</div>
-<div class="row">
-    <div class="col-6">
-        <p>
-            <label>Bairro:</label>
-            @Model.Bairro
-        </p>
-    </div>
-</div>
-<div class="row">
-    <div class="col-6">
-        <p>
-            <div class="d-inline-block">
-                <label>Municipio:</label>
-                @Model.Municipio
+    <div class="col">
+        <div class="card border-top-0" style="border-top-left-radius: unset; border-top-right-radius: unset">
+            <div class="card-body">
+                <h4 class="card-title">Endereço principal</h4>
+                <h5 class="card-subtitle text-muted"></h5>
+                <address class="mt-3 mb-0">
+                    <p class="mb-2">
+                        <span class="text-muted small">Logradourdo</span><br />
+                        @Model.EnderecoAtivo.Logradouro
+                    </p>
+                    <div class="mb-2">
+                        <p class="d-inline-block">
+                            <span class="text-muted small">Bairro</span><br />
+                            @Model.EnderecoAtivo.Bairro
+                        </p>
+                        <p class="d-inline-block ml-5">
+                            <span class="text-muted small">CEP</span><br />
+                            @Model.EnderecoAtivo.Cep
+                        </p>
+                    </div>
+                    <div class="mb-2">
+                        <p class="d-inline-block">
+                            <span class="text-muted small">Município</span><br />
+                            @Model.EnderecoAtivo.Municipio
+                        </p>
+                        <p class="d-inline-block ml-5">
+                            <span class="text-muted small">UF</span><br />
+                            @Model.EnderecoAtivo.Uf
+                        </p>
+                    </div>
+                    @if (!string.IsNullOrWhiteSpace(Model.EnderecoAtivo.Observacao))
+                    {
+                        <p>
+                            <span class="text-muted small">Observação</span><br />
+                            @Model.EnderecoAtivo.Observacao
+                        </p>
+                    }
+                </address>
+
+                @if (Model.OutrosEnderecos.Any())
+                {
+                    <div class="ml-5 mr-5">
+                        <hr class="text-center text-muted" />
+                        <p class="text-muted small mb-0">Outros endereços</p>
+                        <div class="table-responsive">
+                            <table class="table table-sm table-borderless text-muted">
+                                <thead>
+                                    <tr>
+                                        <th>Cep</th>
+                                        <th>Logradouro</th>
+                                        <th>Situação</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model.OutrosEnderecos)
+                                    {
+                                        <tr>
+                                            <td>@item.Cep</td>
+                                            <td>@item.Logradouro</td>
+                                            <td>@(item.Ativo?"Ativo":"Inativo")</td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                }
             </div>
-            <div class="d-inline-block">
-                <label>UF</label>
-                @Model.Uf
-            </div>
-        </p>
-    </div>
-</div>
-@if (!string.IsNullOrWhiteSpace(Model.Observacao))
-{
-    <div class="row">
-        <div class="col-12">
-            <p>
-                <label>Observações:</label>
-                @Model.Observacao
-            </p>
         </div>
     </div>
-}
+</div>
 
 <div class="row">
     <div class="col-12 text-center">
