override repository base

--- a/src/RecebaFacil.Portal/Views/Encomenda/PontoRetiradaIndex.cshtml
+++ b/src/RecebaFacil.Portal/Views/Encomenda/PontoRetiradaIndex.cshtml
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col">
             <h4>Minhas encomendas</h4>
-            <div class="table-responsive">
+            <div class="table-responsive overflow-auto" style="max-height: 600px;">
                 <table class="table table-borderless">
                     <thead>
                         <tr>
