--- a/src/RecebaFacil.Portal/Views/Encomenda/PontoVendaIndex.cshtml
+++ b/src/RecebaFacil.Portal/Views/Encomenda/PontoVendaIndex.cshtml
@@ -17,7 +17,7 @@
 
     <div class="row">
         <div class="col">
-            <div class="table-responsive">
+            <div class="table-responsive overflow-auto" style="max-height: 600px;">
                 <table class="table table-borderless">
                     <thead>
                         <tr>
