--- a/src/RecebaFacil.Portal/Views/Shared/_Layout.cshtml
+++ b/src/RecebaFacil.Portal/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portal Receba Fácil</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link href="~/lib/select2/css/select2.css" rel="stylesheet" />
     <link href="~/fontawesome/css/all.min.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
